--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "compile": "tsc",
+    "start": "tsc && node test.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
